--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
+
 <head>
     <title>Database</title>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -19,52 +22,21 @@
     <section>
         <h1>Lezioni</h1>
         <ul>
-            <li><a href="lectures/7.html" target="_self">Lezione 7</a>  <small>(interrogazione con SQL: query)</small></li>
-        </ul>
-        <ul>
-            <li><a href="lectures/8.html" target="_self">Lezione 8</a>  <small>(query annidate SQL)</small></li>
-        </ul>
-        <ul>
-            <li><a href="lectures/9.html" target="_self">Lezione 9</a> <small>(creazione,Eliminazione,Inserimento di dati in SQL)</small></li>
-        </ul>
-        <ul>
+
+            <li><a href="lectures/7.html" target="_self">Lezione 7</a> <small>(interrogazione con SQL: query)</small>
+            </li>
+            <li><a href="lectures/8.html" target="_self">Lezione 8</a> <small>(query annidate SQL)</small></li>
+            <li><a href="lectures/9.html" target="_self">Lezione 9</a> <small>(creazione,Eliminazione,Inserimento di
+                    dati in SQL)</small></li>
             <li><a href="lectures/11.html" target="_self">Lezione 11</a> <small>(viste)</small></li>
-        </ul>
-        <ul>
-            <li><a href="lectures/12.html" target="_self">Lezione 12</a> <small>(controllo degli accessi)</small></li> 
-        </ul>
-        <ul>
+            <li><a href="lectures/12.html" target="_self">Lezione 12</a> <small>(controllo degli accessi)</small></li>
             <li><a href="lectures/13.html" target="_self">Lezione 13</a> <small>(trigger)</small></li>
-        </ul>
-        <ul>
             <li><a href="lectures/15-16.html" target="_self">Lezione 15/16</a> <small>(MySQL)</small></li>
-        </ul>
-        <ul>
-            <li><a href="lectures/17-18.html" target="_self">Lezione 17-18</a> <small>(Progettazione concettuale)</small></li>
-        </ul>
-        <ul>
+            <li><a href="lectures/17-18.html" target="_self">Lezione 17-18</a> <small>(Progettazione
+                    concettuale)</small></li>
             <li><a href="lectures/19.html" target="_self">Lezione 19</a> <small>(Progettazione logica)</small></li>
-        </ul>
-    </section>
-    <section>
-        <h1>Esercizi</h1>
-        <ul>
-            <li><a href="exercises/7.html" target="_self">Lezione 7</a></li>
-        </ul>
-        <ul>
-            <li><a href="exercises/8.html" target="_self">Lezione 8</a></li>
-        </ul>
-        <ul>
-            <li><a href="exercises/10.html" target="_self">Lezione 10</a></li>
-        </ul>
-        <ul>
-            <li><a href="exercises/12.html" target="_self">Lezione 12</a></li>
-        </ul>
-        <ul>
-            <li><a href="exercises/13.html" target="_self">Lezione 13</a></li>
-        </ul>
-        <ul>
-            <li><a href="exercises/14.html" target="_self">Lezione 14</a></li>
+            <li>Lezione 20<small>(simulazione progettazione di un database)</small></li>
+            <li><a href="lectures/21.html" target="_self">Lezione 21</a> <small>()</small></li>
         </ul>
     </section>
 </body>
