--- a/lectures/21.html
+++ b/lectures/21.html
@@ -4,6 +4,11 @@
     <title>Database</title>
     <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -15,10 +20,11 @@
         <h1>Database</h1>
     </header>
     <section>
-        <h2>Da completare</h2>
-        <p>Inserire gli esercizi fatti dal gruppo Memo di venerdì 24</p>
+        <h2>title</h2>
+       
     </section>
-      
+
+
 </body>
 
 </html>
