--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
             <li><a href="lectures/17-18.html" target="_self">Lezione 17-18</a> <small>(Progettazione
                     concettuale)</small></li>
             <li><a href="lectures/19.html" target="_self">Lezione 19</a> <small>(Progettazione logica)</small></li>
-            <li>Lezione 20<small>(simulazione progettazione di un database)</small></li>
-            <li><a href="lectures/21.html" target="_self">Lezione 21</a> <small>()</small></li>
+            <li><a href="lectures/20.html" target="_self">Lezione 20</a> <small>(<a href="assets/Progettazione completa database.docx" target="_blank">Progettazione completa database</a>, Normalizzazione di schemi relazionali)</small></li>
         </ul>
     </section>
 </body>
