Finita prima parte lezione 21 - Modifiche lezione 20

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     concettuale)</small></li>
             <li><a href="lectures/19.html" target="_self">Lezione 19</a> <small>(Progettazione logica)</small></li>
             <li><a href="lectures/20.html" target="_self">Lezione 20</a> <small>(<a href="assets/Progettazione completa database.docx" target="_blank">Progettazione completa database</a>, Normalizzazione di schemi relazionali)</small></li>
+            <li><a href="lectures/21.html" target="_self">Lezione 21</a> <small>(Lemmi dagli assiomi di Armstrong)</small></li>
         </ul>
     </section>
 </body>
