Finita prima parte lezione 22

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li><a href="lectures/19.html" target="_self">Lezione 19</a> <small>(Progettazione logica)</small></li>
             <li><a href="lectures/20.html" target="_self">Lezione 20</a> <small>(<a href="assets/Progettazione completa database.docx" target="_blank">Progettazione completa database</a>, Anomalie e assiomi di Armstrong)</small></li>
             <li><a href="lectures/21.html" target="_self">Lezione 21</a> <small>(Correttezza, completezza, lemma fondamentale)</small></li>
+            <li><a href="lectures/22.html" target="_self">Lezione 22</a> <small>()</small></li>
         </ul>
     </section>
 </body>
