--- a/lectures/21.html
+++ b/lectures/21.html
@@ -84,6 +84,16 @@
             cioè l'insieme di tutti quegli attributi che dipendono funzionalmente da qualche altro insieme di X di attributi.
         </p>
     </section>
+    <section>
+        <h2>Equivalenze tra dipendenze funzionali</h2>
+        <p>
+            Siano F e G insiemi di dipendenze funzionali allora diiamo che sono equivalenti se F+=G+.
+        </p>
+        <h3>Algoritmo di equivalenza</h3>
+        <p>
+            Per ogni Y->Z in F controlliamo se essa è in G+ calcolando Y
+        </p>
+    </section>
 
 </body>
 
