--- a/lectures/22.html
+++ b/lectures/22.html
@@ -40,16 +40,16 @@
         <h1>Database</h1>
     </header>
     <section>
-        <h2>Conservazione delle dipendenze funzionali</h2>
+        <h2>Conservazione di dti e dipendenze funzionali</h2>
         <p>
-            La <span class="bold">proiezione pi_Z(F) di F su un insieme di Z di attributi</span> è l'insieme delle
+            La <span class="bold">proiezione $\pi_Z(F)$ di F su un insieme di Z di attributi</span> è l'insieme delle
             dipendenze X->Y appartenenti a F+ tali che XY è sottoinsieme di Z.
         </p>
         <p>
             Dato uno schema relazionale (R,F) ed una sua decomposizione d={R1,R2,...,Rk} si dice che essa
             <span class="bold">conserva le dipendenze funzionali</span> se F è implicata logicamente dall'unione delle
             proiezioni
-            pi_Ri(F) di F sugli Ri.
+            $\pi_{Ri}(F)$ di F sugli Ri.
         </p>
         <p>
             Una decomposizione loss-less join mi permette di non perdere dati, una decomposizione che invecec
