--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li><a href="lectures/20.html" target="_self">Lezione 20</a> <small>(<a href="assets/Progettazione completa database.docx" target="_blank">Progettazione completa database</a>, Anomalie e assiomi di Armstrong)</small></li>
             <li><a href="lectures/21.html" target="_self">Lezione 21</a> <small>(Correttezza, completezza, lemma fondamentale)</small></li>
             <li><a href="lectures/22.html" target="_self">Lezione 22</a> <small>(Forme normali BCNF e 3NF e algoritmi per il calcolo)</small></li>
-            <li><a href="lectures/23.html" target="_self">Lezione 23</a> <small>()</small></li>
+            <li><a href="lectures/23.html" target="_self">Lezione 23</a> <small>(Gestione delle transizioni)</small></li>
         </ul>
     </section>
 </body>
